--- a/ASPNetCoreWebProject/appsettings.Development.json
+++ b/ASPNetCoreWebProject/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TMDT": "Server=DESKTOP-7ODD7CH\\SQLEXPRESS;Database=TMDT;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
